# yolort

./: .buildinfo  .clang-format  .clang-tidy  .gitattributes  .gitignore  .pre-commit-config.yaml  .restyled.yaml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  codeformat.sh  demo.py  detect.py  engine.py  genindex.html  hubconf.py  index.html  installation.html  main.py  models.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  sitemap.xml  what_is_yolort.html  yolo_compare.py  yolov5.html
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug-report.md  bug-report.yml  config.yml  documentation.md  documentation.yml  feature-request.md  feature-request.yml  question.md
.github/workflows/: ci-test.yml  ci_test.yml  code-format.yml  codecov.yml  codeql-analysis.yml  gh-pages.yml  nightly.yml  pypi-release.yml  rebase.yml  stable.yml
_modules/: index.html
_modules/yolort/: models.html
_sources/: index.rst.txt
_sources/notebooks/: comparison-between-yolort-vs-yolov5.ipynb.txt  export-onnx-inference-onnxruntime.ipynb.txt  export-relay-inference-tvm.ipynb.txt  how-to-align-with-ultralytics-yolov5.ipynb.txt  inference-pytorch-export-libtorch.ipynb.txt  model-graph-visualization.ipynb.txt  onnx-graphsurgeon-inference-tensorrt.ipynb.txt
datasets/: __init__.py  coco.py  coco_eval.py  detection_datamodule.py  pl_datamodule.py  pl_wrapper.py  transforms.py  voc.py  voc_eval.py
deployment/: CMakeLists.txt  README.md
deployment/include/: cmdline.h
deployment/libtorch/: CMakeLists.txt  README.md  cmdline.h  main.cpp
deployment/ncnn/: CMakeLists.txt  README.md  export_onnx.py  main.cpp  yolort-sim.param
deployment/ncnn/tools/: yolort_deploy_friendly.py
deployment/onnxruntime/: CMakeLists.txt  README.md  cmdline.h  main.cpp
deployment/onnxruntime-python/: README.md  example.py
deployment/onnxruntime/src/: inference.cpp
deployment/ppq/: README.md  all_in_one.py  create_onnx.py  distill_data.py  export2onnx.py  ptq.py  ptq_fx.py  quantization_backup.py  requirements.txt  utils.py
deployment/src/: main.cpp
deployment/tensorrt/: CMakeLists.txt  README.md  main.cpp
deployment/tensorrt-yolov6/: CMakeLists.txt  README.md  main.cpp  trt_dep.cpp  trt_dep.hpp
deployment/tensorrt-yolov6/build_model/: CMakeLists.txt  main.cpp
deployment/tensorrt-yolov7/: CMakeLists.txt  README.md  main.cpp
deployment/tensorrt/preprocess/: CMakeLists.txt
deployment/tvm/: test_tvm.py
docs/: Makefile  requirements.txt
docs/source/: conf.py  datasets.rst  index.rst  installation.rst  models.rst  notebooks  utils.rst  what_is_yolort.rst  yolov5.rst
exps/default/: yolov3.py  yolov5l.py  yolov5m.py  yolov5m6.py  yolov5n.py  yolov5n6.py  yolov5s.py  yolov5s6.py  yolov5ts.py  yolox_l.py  yolox_m.py  yolox_nano.py  (+3 more)
include/: cifar10.h
libtorch-classification/: README.md
libtorch-inference/: CMakeLists.txt
libtorch-inference/include/: detector.h  utils.h
libtorch-inference/src/: detector.cpp  main.cpp
libtorch_inference/: CMakeLists.txt  README.md
libtorch_inference/include/: detector.h  utils.h
libtorch_inference/src/: detector.cpp  main.cpp
models/: __init__.py  _utils.py  anchor_utils.py  backbone.py  backbone_utils.py  box_head.py  common.py  darknet.py  experimental.py  export.py  lightning_wrapper.py  path_aggregation_network.py  pl_wrapper.py  transform.py  yolo.py  yolo_wrapped.py  yolov5s.yaml
notebooks/: .gitignore  README.md  align_with_ultralytics_yolov5.ipynb  anchor-label-assignment-visualization.html  anchor-label-assignment-visualization.ipynb  comparison-between-yolort-vs-yolov5.html  comparison-between-yolort-vs-yolov5.ipynb  export-onnx-inference-onnxruntime.html  export-onnx-inference-onnxruntime.ipynb  export-relay-inference-tvm.html  export-relay-inference-tvm.ipynb  export-tensorrt-infer-with-jetson.ipynb  how-to-align-with-ultralytics-yolov5.html  how-to-align-with-ultralytics-yolov5.ipynb  inference-pytorch-export-libtorch.html  inference-pytorch-export-libtorch.ipynb  jetson-nano.ipynb  load-model-as-ultralytics.ipynb  model-graph-visualization.html  model-graph-visualization.ipynb  model-inference-on-pytorch-libtorch.ipynb  onnx-graphsurgeon-inference-tensorrt.html  onnx-graphsurgeon-inference-tensorrt.ipynb  training-samples-visualization.ipynb  visualize-jit-models.ipynb  why-yolort.html  why-yolort.ipynb
src/: cifar10.cpp  main.cpp  model.cpp  transform.cpp
test/: common_utils.py  dataset_utils.py  test_base.py  test_data_pipeline.py  test_data_transforms.py  test_datasets.py  test_dependency.py  test_engine.py  test_hooks_utils.py  test_image_utils.py  test_model.py  test_models.py  test_models_anchor_utils.py  test_models_common.py  test_models_negative_samples.py  test_models_transform.py  test_models_utils.py  test_models_yolov5.py  test_onnx.py  test_opaque_func.py  test_opaque_func_registry.py  test_relay.py  test_relaying.py  test_runner.py  test_runtime.py  test_runtime_ort.py  test_target_registry.py  test_torchscript.py  test_trainer.py  test_utils.py  test_v5.py  test_v5_activations.py  test_v5_common.py  test_v5_general.py  test_v5_metrics.py  torch_utils.py
test/tracing/: CMakeLists.txt  test_tracing.cpp  trace_model.py
tools/: build_engine.py  convert_txt_to_json.py  convert_yolo_to_coco.py  convert_yolov5_to_yolort.py  detect.py  eval_metric.py  export_model.py  export_onnx.py  export_onnx_for_ncnn.py  ptq_fx.py  quantization_backup.py  run-clang-format.py  run_clang_format.py  tensorrt_int8_calibrating.py  torchscript2ncnn.py  train.py  train_net.py  train_vanilla.py  val_net.py  yolort_deploy_friendly.py  yolov5_to_yolort.py  yolov5_v6_detect.py  yolov5_v6_train.py
utils/: activations.py  box_ops.py  builtin_meta.py  checkpoint_utils.py  datasets.py  general.py  graph_utils.py  image_utils.py  misc.py  torch_utils.py  updated_checkpoint.py  yolo2coco.py
yolort/: __init__.py  _libpyxir.py  base.py  opaque_func.py  opaque_func_registry.py  predict.py  target.py  target_registry.py  test.py  train.py  type.py
(+393 files in other folders)
