[metadata]
license_file = LICENSE
description-file = README.md

[pep8]
max-line-length = 110

[flake8]
max-line-length = 110
ignore = E203, E402, W503, W504, F821
per-file-ignores =
    __init__.py: F401, F403, F405
    ./hubconf.py: F401
    ./yolort/v5/utils/datasets.py: E741
    ./yolort/v5/utils/general.py: E741
exclude = venv

[pydocstyle]
select = D417 # Missing argument descriptions in the docstring
